--- a/templates/403.html
+++ b/templates/403.html
@@ -37,7 +37,7 @@
             No pudimos encontrar la página que buscabas.
           </p>
           <p>
-              Volver al <a href="{% url 'usuarios:home' %}">Dahboard</a>
+              Volver al <a href="{% url 'usuarios:home' %}">Dashboard</a>
           </p>
         </div>
       </div>
