--- a/templates/control_bar.html
+++ b/templates/control_bar.html
@@ -111,8 +111,8 @@
                 <!-- <img src="dist/img/user-160x160.jpg" class="img-circle" alt="User Image">-->
 
                 <p>
-                  Thanh Nguyen - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  {{ user.get_full_name }}
+                  <small>{{ user.cargo }}</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -132,12 +132,7 @@
               </li>
               <!-- Menu Footer-->
               <li class="user-footer">
-                <div class="pull-left">
-                  <a href="#" class="btn btn-default btn-flat">Profile</a>
-                </div>
-                <div class="pull-right">
-                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
-                </div>
+                  <a href="{% url 'usuarios:logout' %}" class="btn btn-default btn-flat">Cerrar Sesión</a>
               </li>
             </ul>
           </li>
