--- a/apps/usuarios/templates/usuarios/editar_usuario.html
+++ b/apps/usuarios/templates/usuarios/editar_usuario.html
@@ -2,9 +2,8 @@
 {% load staticfiles %}
 {% load bootstrap3 %}
 
-{% block titulo_pagina %}Editar Usuarios{% endblock titulo_pagina %}
+{% block titulo_pagina %}Editar Usuario {{nombre_usuario_editar}}{% endblock titulo_pagina %}
 {% block titulo %}Gestión de Usuarios{% endblock titulo %}
-{% block descripcion_pagina %} Gestiona los usuarios de ERPAdmin {% endblock descripcion_pagina %}
 {% block miga_pan %}
 <li><a href="{% url 'usuarios:home'%}"><i class="fa fa-dashboard"></i> DASHBOARD</a></li>
 <li class="active">GESTIONAR USUARIOS</li>
