agregar valor y coordinador al crear una orden servicio
Se cambio integerField por positive field en el modelo de OrdenServicio

--- a/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
@@ -50,7 +50,9 @@
               <div class="col-sm-12">
                   {% bootstrap_field form.encargado %}
               </div>
-
+              <div class="col-sm-6">
+                  {% bootstrap_field form.valor%}
+                </div>
               <div class="col-sm-6">
                 {% bootstrap_field form.comentarios%}
               </div>
