--- a/apps/compras/templates/jefe_compras.html
+++ b/apps/compras/templates/jefe_compras.html
@@ -1,105 +1,30 @@
-{% extends 'base.html' %}
+{% extends 'lista_solicitudes.html' %}
 
-{% block titulo_pagina %}
-  Solicitudes de Compra
-{% endblock titulo_pagina %} 
-
-{% block miga_pan %}
-  <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-  <li><a href="#">Compras</a></li>
-  <li class="active">Solicitudes de Compra</li>
-{% endblock miga_pan %}
-
-{% block contenido %}
-  <div class="content-wrapper">    
+<div class="content-wrapper">  
     <!-- Main content -->
     <section class="box">          
       <div class="col-md-12">
-        <!-- general form elements -->
-        <div class="box box-primary">            
-          <!-- /.box-header -->
-          <!-- form start -->
-          <form role="form">
-            <div class="box-body">
-              <!-- Panel colapsable --> 
-              <div class="container col-md-12">   
-                <div class="form-group row">
-                  <div class="col-xs-6">
-                    <label for="inputNombre">Nombre</label>
-                    <input type="text" class="form-control" id="inputNombre" placeholder="Emilia" disabled>
-                  </div>
-
-                  <div class="col-xs-3">
-                    <label for="inputId">Identificación</label>
-                    <input type="text" class="form-control" id="inputId" placeholder="2468" disabled>
-                  </div>
-
-                  <div class="col-xs-3">
-                    <label for="inputNombre">Cargo</label>
-                    <input type="text" class="form-control" id="inputNombre" placeholder="Jefe de Compras" disabled>
-                  </div>
-                </div>  <!-- datos del jefe de compras -->   
-
-                <div class="panel-group" id="accordion">                                       
-                  <div class="panel panel-default">                                                                      
-                    <div class="panel-heading">
-                      <h3 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">Solucitud #1</a>
-                        <i class="fa fa-circle text-green"></i> <!-- cambia color con el estado -->
-                      </h3>                  
-                    </div>
-
-                    <div id="collapse1" class="panel-collapse collapse">
-                      <div class="form-group row">
-                        <div class="col-xs-6">
-                          <label for="inputNombre">Nombre Solicitante</label>
-                          <input type="text" class="form-control" id="inputNombre" placeholder="Alfredo" disabled>
-                        </div>
-
-                        <div class="col-xs-3">
-                          <label for="inputId">Identificación</label>
-                          <input type="text" class="form-control" id="inputId" placeholder="1234" disabled>
-                        </div>                          
-                      </div>
-
-                      <div class="form-group">
-                        <label for="inputElemento">Elemento requerido</label>
-                        <input type="text" class="form-control" id="inputElemento" placeholder="Impresora" disabled>
-                      </div>
-
-                      <div class="form-group">
-                        <label for="inputCantidad">Cantidad</label>
-                        <input type="text" class="form-control" id="inputCantidad" placeholder="2" disabled>
-                      </div>
-
-                      <div class="form-group row">
-                        <div class="form-group col-xs-6">
-                          <label for="exampleInputFile">Fecha realización</label>                  
-                          <!-- Date -->                              
-                          <input type="text" class="form-control pull-right" id="datepicker" placeholder="15/09/2018" disabled>
-                        </div>
-
-                        <div class="form-group col-xs-6">
-                          <label for="exampleInputFile">Fecha esperada</label>                  
-                          <!-- Date -->                            
-                          <input type="text" class="form-control pull-right" id="datepicker" placeholder="26/09/2018" disabled>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <label for="inputJust">Justificación</label>
-                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="4" cols="5" disabled>
-                          Se necesita impresora para imprimir los diferentes documentos requeridos en el desarrollo de las actividades
-                        </textarea>
-                      </div>                        
-                    </div> <!-- fin solicitud -->                                                
-                  </div>                    
-                </div>
-              </div> <!-- container -->
-            </div> <!-- /.box-body -->              
-          </form>
-        </div> <!-- /.box -->                          
-      </div>                           
+        <div class="form-group row">
+          <div class="col-xs-6">
+            <label for="inputNombre">Nombre</label>
+            <input type="text" class="form-control" id="inputNombre" disabled
+              placeholder="Emilia">
+          </div>
+        
+          <div class="col-xs-3">
+            <label for="inputId">Identificación</label>
+            <input type="text" class="form-control" id="inputId" disabled
+              placeholder="2468">
+          </div>
+        
+          <div class="col-xs-3">
+            <label for="inputNombre">Cargo</label>
+            <input type="text" class="form-control" id="inputNombre" disabled
+              placeholder="Jefe de Compras">
+          </div>
+        </div>  <!-- datos del jefe de compras -->
+        {% block contenido %}
+        {% endblock contenido %}                      
+      </div>                  
     </section> <!-- /.content -->
-  </div> <!-- /.content-wrapper -->
-{% endblock contenido %}
+  </div>          
