--- a/apps/compras/templates/lista_solicitudes.html
+++ b/apps/compras/templates/lista_solicitudes.html
@@ -29,53 +29,61 @@
 
                     <div class="panel-heading">
                       <h3 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">Solucitud #1</a>
+                        <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">
+                          Solucitud #{{solicitud.codigo}}
+                        </a>
                         <i class="fa fa-circle text-yellow"></i> <!-- cambia color con el estado -->
                       </h3>                  
                     </div>
 
                     <div id="collapse1" class="panel-collapse collapse">
-
                       <div class="form-group row">
                         <div class="col-xs-6">
                           <label for="inputNombre">Nombre Solicitante</label>
-                          <input type="text" class="form-control" id="inputNombre" placeholder="Alfredo" disabled>
+                          <input type="text" class="form-control" id="inputNombre" disabled>                          
                         </div>
 
                         <div class="col-xs-3">
                           <label for="inputId">Identificacion</label>
-                          <input type="text" class="form-control" id="inputId" placeholder="1234" disabled>
+                          <input type="text" class="form-control" id="inputId" disabled 
+                            placeholder={{solicitud.usuario.codigo}}> <!-- ¿¿esto se hace así?? -->                           
                         </div>                        
                       </div>
 
                       <div class="form-group">
                         <label for="inputElemento">Elemento requerido</label>
-                        <input type="text" class="form-control" id="inputElemento" placeholder="Impresora" disabled>
+                        <input type="text" class="form-control" id="inputElemento" disabled
+                          placeholder={{solicitud.articulo.nombre}}>                        
                       </div>
 
                       <div class="form-group">
                         <label for="inputCantidad">Cantidad</label>
-                        <input type="text" class="form-control" id="inputCantidad" placeholder="2" disabled>
+                        <input type="text" class="form-control" id="inputCantidad" disabled
+                          placeholder={{solicitud.articulo.cantidad}}>                        
                       </div>
 
                       <div class="form-group row">
                         <div class="form-group col-xs-6">
                           <label for="exampleInputFile">Fecha realizacion</label>                  
                           <!-- Date -->                              
-                          <input type="text" class="form-control pull-right" id="datepicker" placeholder="15/09/2018" disabled>
+                          <input type="text" class="form-control pull-right" id="datepicker" disabled
+                            placeholder={{solicitud.fecha_realizacion}}>
+                          <!--{{solicitud.fecha_realizacion}} en el modelo ER esta tiempo ¿? -->
                         </div>
 
                         <div class="form-group col-xs-6">
                           <label for="exampleInputFile">Fecha esperada</label>                  
                           <!-- Date -->                            
-                          <input type="text" class="form-control pull-right" id="datepicker" placeholder="26/09/2018" disabled>
+                          <input type="text" class="form-control pull-right" id="datepicker" disabled
+                            placeholder={{solicitud.fecha_esperada}}>
+                          <!--{{solicitud.fecha_esperada}} en el modelo ER esta tiempo ¿? -->
                         </div>
                       </div>
 
                       <div class="form-group">
                         <label for="inputJust">Justificacion</label>
-                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50" disabled>
-                          Se necesita impresora para imprimir los diferentes documentos requeridos en el desarrollo de las actividades
+                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50" readonly>
+                          {{solicitud.justificacion}}
                         </textarea>
                       </div>
                     <!-- collapse --> 
@@ -86,14 +94,14 @@
                 {% endfor %} 
               </div>
             {% else %}
-            <h3>no hay solicitudes registradas</h3>
+            <h3>No hay solicitudes registradas</h3>
             {% endif %}
             <!-- /.box-body -->
             </div>    
             <div class="box-footer text-center">
               <button type="submit" class="btn btn-primary">Nueva Solicitud</button>      
             </div>        
-        <!-- /.box -->            
+            <!-- /.box -->            
           </form>          
           <!-- /.box-body -->
         </div>
