--- a/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
@@ -3,6 +3,10 @@
 {% load bootstrap3 %}
 
 {% block miga_pan %}
+    <ol class="breadcrumb">
+        <li><a href="#"><i class="fa fa-dashboard"></i> Ordenes de Servicio </a></li>
+        <li class="active">Listado</li>
+    </ol>
 {% endblock miga_pan %}
 
 {% block titulo %}Orden de Servicio{% endblock titulo %}
