--- a/apps/ordenes_servicio/templates/ordenes_servicio/index.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/index.html
@@ -29,7 +29,7 @@
                     <div class="icon">
                         <i class="ion {{ box.icon }}"></i>
                     </div>
-                    <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                    <a href="{% url 'ordenes_servicio:consultar_orden_servicio' %}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
                 </div>
             </div>
         {% endfor %}
