--- a/apps/evaluaciones/templates/consulta_evaluaciones.html
+++ b/apps/evaluaciones/templates/consulta_evaluaciones.html
@@ -3,19 +3,19 @@
 {% load bootstrap3 %}
 
 {% block titulo %}
-    Listado de preguntas
+    Listado de evaluaciones
 {% endblock %}
 
 {% block titulo_pagina %}
-    Listado de preguntas
+    Listado de evaluaciones
 {% endblock %}
 
 {% block descripcion_pagina %}
-    Listado de preguntas activas en la empresa
+    Listado de evaluaciones registradas en la empresa
 {% endblock descripcion_pagina %}
 
 {% block miga_pan %}
-    <li><a href="#"><i class="fa fa-dashboard"></i> Preguntas</a></li>
+    <li><a href="#"><i class="fa fa-dashboard"></i> Evaluaciones</a></li>
     <li class="active">Listado</li>
 {% endblock miga_pan %}
 
@@ -23,7 +23,7 @@
 {% block contenido %}
     <div class="box box-primary">
         <div class="box-header with-border">
-            <h3 class="box-title">Listado de preguntas</h3>
+            <h3 class="box-title">Listado de evaluaciones</h3>
         </div>
         <!-- /.box-header -->
         <!-- form start -->
