--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     {% block css %}{% endblock css %}
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini sidebar-collapse">
+<body class="hold-transition skin-blue sidebar-mini"> <!-- sidebar-collapse -->
 <div class="wrapper">
 
     <!-- Main Header -->
