inicio crear solicitud

--- a/templates/compras/lista_solicitudes.html
+++ b/templates/compras/lista_solicitudes.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block miga_pan %}
-<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-<li><a href="#">Compras</a></li>
-<li class="active">Solicitudes de Compra</li>
+<li><a href="#"><i class="fa fa-dashboard"></i> Inicio</a></li>
+<li><a href="{% url 'compras:index' %}">Compras</a></li>
+<li class="active"><a href="{% url 'compras:solicitudes' %}">Solicitudes de compra</a></li>
 {% endblock miga_pan %}
 
 {% block titulo_pagina %}
