--- a/apps/evaluaciones/templates/consulta_evaluaciones.html
+++ b/apps/evaluaciones/templates/consulta_evaluaciones.html
@@ -33,6 +33,7 @@
                 <tr>
                     <th>Fecha</th>
                     <th>Colaborador</th>
+                    <th>Estado</th>
                     <th>Opciones</th>
                 </tr>
                 </thead>
@@ -42,6 +43,11 @@
                         <tr>
                             <td>{{ evaluacion.date }}</td>
                             <td>{{ evaluacion.employee }}</td>
+                            {% if evaluacion.estado %}
+                                <td><span class="label label-success">ACTIVO</span></td>
+                            {% else %}
+                                <td><span class="label label-danger">INACTIVO</span></td>
+                            {% endif %}
                             <td>
                                 <div class="btn-group">
 
