--- a/apps/evaluaciones/templates/consulta_preguntas.html
+++ b/apps/evaluaciones/templates/consulta_preguntas.html
@@ -41,9 +41,9 @@
                     <tr>
                         <td>{{ pregunta.question_statement }}</td>
                         {% if pregunta.estado %}
-                            <td>ACTIVO</td>
+                            <td><span class="label label-success">ACTIVO</span></td>
                         {% else %}
-                            <td>INACTIVO</td>
+                            <td><span class="label label-danger">INACTIVO</span></td>
                         {% endif %}
                         <td>
                             <div class="btn-group">
