--- a/apps/nomina/templates/consult_payroll.html
+++ b/apps/nomina/templates/consult_payroll.html
@@ -50,9 +50,9 @@
                         <td>{{ nomina.tax }}</td>
                         <td>{{ nomina.net_salary }}</td>
                         {% if nomina.estado %}
-                            <td>ACTIVO</td>
+                            <td><span class="label label-success">ACTIVO</span></td>
                         {% else %}
-                            <td>INACTIVO</td>
+                            <td><span class="label label-danger">INACTIVO</span></td>
                         {% endif %}
                         <td>
                             <div class="btn-group">
