--- a/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
@@ -3,10 +3,10 @@
 {% load bootstrap3 %}
 
 {% block miga_pan %}
-    <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Ordenes de Servicio </a></li>
-        <li class="active">Listado</li>
-    </ol>
+<ol class="breadcrumb">
+    <li><a href="#"><i class="fa fa-dashboard"></i> Ordenes de Servicio </a></li>
+    <li class="active">Listado</li>
+</ol>
 {% endblock miga_pan %}
 
 {% block titulo %}Orden de Servicio{% endblock titulo %}
@@ -60,16 +60,22 @@
                     <td>{{ orden.comentarios }}</td>
                     <td>
                         {%  if orden.estado == 'AS' %}
-                            {%  if cargo == 'O' %}
-                                <button style="margin: 1px 15%" type="button" class="btn btn-primary btn-xs cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_asignacion">Aceptar Orden</button>
-                            {% endif %}
+                        {%  if cargo == 'O' %}
+                        <button style="margin: 1px 15%" type="button" class="btn btn-primary btn-xs cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_asignacion">Aceptar Orden</button>
+                        {%  elif cargo == 'C' %}
+                        <a href="{% url 'ordenes_servicio:cancelar_orden_servicio' orden.id %}">
+                            <button style="margin: 1px 25%" name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-danger btn-xs">Cancelada</button>
+                        </a>
+                        {% endif %}
                         {% else %}
-                        <div style="margin: 1px 10%" class="btn-group btn-group-xs">
+                        {%  if cargo == 'O' %}
+                        <div style="margin: 1px 7%" class="btn-group btn-group-xs">
                             <button name="{{orden.estado}}" id="cerrar_boton" type="button" class="btn btn-success cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_cerrada">Cerrada</button>
                             <a href="{% url 'ordenes_servicio:cancelar_orden_servicio' orden.id %}">
                                 <button name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-danger">Cancelada</button>
                             </a>
                         </div>
+                        {% endif %}
                         {% endif %}
                     </td>
                 </tr>
@@ -106,27 +112,27 @@
 
 <!-- Modal para confirmar asignacion -->
 <div class="modal fade" id="confirmar_asignacion">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
-                        <span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Aceptar Orden de Servicio</h4>
-                </div>
-                <div class="modal-body">
-                    <p>¿Está seguro que desea aceptar la orden de servicio No.
-                        <b id="my_orden_id"></b>?</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">No</button>
-                    <button onclick="aceptar_orden_servicio()" type="button" class="btn btn-primary">Si</button>
-                </div>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                    <span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Aceptar Orden de Servicio</h4>
             </div>
-            <!-- /.modal-content -->
+            <div class="modal-body">
+                <p>¿Está seguro que desea aceptar la orden de servicio No.
+                    <b id="my_orden_id"></b>?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">No</button>
+                <button onclick="aceptar_orden_servicio()" type="button" class="btn btn-primary">Si</button>
+            </div>
         </div>
-        <!-- /.modal-dialog -->
+        <!-- /.modal-content -->
     </div>
-    <!-- /.modal -->
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 {% endblock contenido %}
 
 {% block js %}
@@ -154,11 +160,11 @@
         botones_cancelar.disabled = true;
         botones_cerrar.disabled = true;
         for (var i = 0; i < botones_cancelar.length; i++) {
-            var item = botones_cancelar[i]; 
+            var item = botones_cancelar[i];
             item.disabled = true;
         }
         for (var i = 0; i < botones_cerrar.length; i++) {
-            var item = botones_cerrar[i]; 
+            var item = botones_cerrar[i];
             item.disabled = true;
         }
     });
