--- a/apps/compras/templates/jefe_compras_cotiza_comp.html
+++ b/apps/compras/templates/jefe_compras_cotiza_comp.html
@@ -64,42 +64,35 @@
                             <div class="col-xs-6">
                               <label for="inputNombre">Nombre Proveedor</label>
                               <input type="text" class="form-control" id="inputNombre" disabled
-                                placeholder={{cotizacion.proveedor.nombre}}> 
+                                placeholder={{proveedor.nombre}}> 
                                 <!--proveedor no tiene nombre en el diagram ER-->
                             </div>
 
                             <div class="col-xs-3">
                               <label for="inputId">Identificación</label>
                               <input type="text" class="form-control" id="inputId" disabled
-                                placeholder={{cotizacion.proveedor.codigo}}>
+                                placeholder={{proveedor.codigo}}>
                             </div>                          
                           </div>
 
                           <div class="form-group">
                             <label for="inputElemento">Elemento</label>
                             <input type="text" class="form-control" id="inputElemento" disabled
-                              placeholder={{cotizacion.articulo.nombre}}>
+                              placeholder={{articuloscotizacion.articulo.nombre}}>
                           </div>                        
 
                           <div class="form-group">
                             <label for="inputCantidad">Cantidad</label>
                             <input type="text" class="form-control" id="inputCantidad" disabled
-                              placeholder={{cotizacion.articulo.cantidad}}>
+                              placeholder={{articuloscotizacion.cantidad}}>
                           </div>
 
                           <div class="form-group row">
                             <div class="form-group col-xs-6">
-                              <label for="datepicker">Fecha recepción</label>                  
+                              <label for="datepicker">Fecha realizada</label>                  
                               <!-- Date -->                              
                               <input type="text" class="form-control pull-right" id="datepicker" disabled
-                                placeholder="15/09/2018">
-                            </div>
-
-                            <div class="form-group col-xs-6">
-                              <label for="datepicker">Fecha enviado</label>                  
-                              <!-- Date -->                            
-                              <input type="text" class="form-control pull-right" id="datepicker" disabled
-                                placeholder="17/09/2018">
+                                placeholder={{cotizacion.fecha_realizada}}>
                             </div>
                           </div> <!-- group row -->
 
@@ -107,13 +100,13 @@
                             <div class="form-group col-xs-6">
                               <label for="inputValorU">Valor unidad $</label>
                               <input type="text" class="form-control" id="inputValorU" disabled
-                                placeholder="800.000">
+                                placeholder={{articuloscotizacion.precio}}>
                             </div> 
 
                             <div class="form-group col-xs-6">
                               <label for="inputValorT">Valor Total $</label>       
                               <input type="text" class="form-control pull-right" id="inputValorT" disabled
-                                placeholder="1'600.000">
+                                placeholder={{cotizacion.total}}>
                             </div>                            
                           </div> <!-- group row --> 
 
