--- a/apps/compras/templates/lista_solicitudes.html
+++ b/apps/compras/templates/lista_solicitudes.html
@@ -46,7 +46,7 @@
                         <div class="col-xs-3">
                           <label for="inputId">Identificacion</label>
                           <input type="text" class="form-control" id="inputId" disabled 
-                            placeholder={{solicitud.usuario.codigo}}> <!-- ¿¿esto se hace así?? -->                           
+                            placeholder={{solicitud.usuario.codigo}}> 
                         </div>                        
                       </div>
 
@@ -62,21 +62,12 @@
                           placeholder={{solicitud.articulo.cantidad}}>                        
                       </div>
 
-                      <div class="form-group row">
-                        <div class="form-group col-xs-6">
-                          <label for="exampleInputFile">Fecha realizacion</label>                  
-                          <!-- Date -->                              
-                          <input type="text" class="form-control pull-right" id="datepicker" disabled
-                            placeholder={{solicitud.fecha_realizacion}}>
-                          <!--{{solicitud.fecha_realizacion}} en el modelo ER esta tiempo ¿? -->
-                        </div>
-
+                      <div class="form-group row">                        
                         <div class="form-group col-xs-6">
                           <label for="exampleInputFile">Fecha esperada</label>                  
                           <!-- Date -->                            
                           <input type="text" class="form-control pull-right" id="datepicker" disabled
                             placeholder={{solicitud.fecha_esperada}}>
-                          <!--{{solicitud.fecha_esperada}} en el modelo ER esta tiempo ¿? -->
                         </div>
                       </div>
 
