--- a/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/crear_orden_servicio.html
@@ -11,8 +11,6 @@
 
 {% block titulo %}Orden Servicio{% endblock titulo %}
 
-{% block titulo_pagina %}Crear Orden de Servicio{% endblock %}
-
 {% block css %}
 <style media="screen">
     input[name=cliente_seleccionado_texto] {
@@ -29,9 +27,11 @@
 
 <div class="col-md-12">
   <div class="box box-primary">
-
-      <div class="box-body">
-        <form method="POST" id="formulario"> {% csrf_token %}
+        <div style="padding-bottom: 0" class="box-header">
+            <h3 class="box-title">Crear Orden de Servicio</h3>
+        </div>
+      <div style="padding-top: 0" class="box-body">
+        <form style="padding-top: 0" method="POST" id="formulario"> {% csrf_token %}
           <div class="row">
               <div class="col-sm-12">
                 {% bootstrap_field form.servicio_vendido%}
